--- a/profile-card-component/style.css
+++ b/profile-card-component/style.css
@@ -4,14 +4,14 @@ body{
 }
 .bg-top{
     position: absolute;
-    left: 0;
-    top: -50%;
+    right: 50%;
+    bottom:35%;
     z-index: -1;
 }
 .bg-bottom{
     position: absolute;
-    right: 0;
-    bottom:-50%;
+    left: 50%;
+    top:45%;
     z-index: -1;
 }
 .container {
@@ -37,7 +37,7 @@ body{
     margin-top: -50px;
     margin-bottom: 20px;
     border-radius: 50%;
-    border: aliceblue 5px solid;
+    border: white 5px solid;
 }
 .profile-card{
     display: flex;
@@ -46,10 +46,12 @@ body{
     justify-content: flex-end;
     align-items: center;
     
-    width: 375px;
-    height: 400px;
-    border-radius: 20px;
+    width: 350px;
+    height: 375px;
+    border-radius: 10px;
     box-shadow: 10px 10px 74px -17px rgba(0,0,0,0.30);
+
+    
     
     background: url('./images/bg-pattern-card.svg');
     
@@ -60,14 +62,13 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     
-    height: 65%;
+    
     width: 100%;
-    border-radius: 0 0 20px 20px;
-    border-top: hsl(0, 0%, 59%, .3) 1px solid;
-    
-    background-color: aliceblue;
+    border-radius: 0 0 10px 10px;
+
+    background-color: white;
 }
 
 .profile-info{
@@ -77,7 +78,7 @@ body{
     justify-content: space-between;
     align-items: center;
 
-    margin-bottom: 30px;
+    
     
 }
 .profile-numbers-wrapper{
@@ -94,9 +95,10 @@ body{
 
 .profile-numbers{
     display: flex;
-    width: 80%;
-
-    padding: 10px;
+    width: 85%;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    
     justify-content: space-around;
     flex-direction: row;
     align-items: center;
@@ -109,18 +111,34 @@ body{
     padding: 0;
     margin: 0;
     margin-left: 10px;
+    color: #2d3248;
 }
 
+.profile-info p {
+    margin-top: 10px;
+    margin-bottom: 25px;
+}
 
 .profile-info .age {
     font-weight: 400;
 }
 
+.profile-numbers h3{
+    padding: 0;
+    color: #2d3248;
+    font-size: 18px;
+    line-height: 18px;
+}
 .profile-numbers p{
-    color: hsl(0, 0%, 59%);
+    color:#6a6f81;
+
     letter-spacing: 2px;
-    font-size: 12px;
+    font-size: 10px;
+    line-height: 10px;
+    margin-top: -10px;
     text-align: center;
+    
+    
 }
 .row {
     display: flex;
