--- a/faq-accordion-card/style.css
+++ b/faq-accordion-card/style.css
@@ -45,7 +45,8 @@ body{
     
     position: relative;
     z-index:0;
-    background: linear-gradient(hsl(273, 75%, 66%), hsl(240, 73%, 65%));
+    background:         linear-gradient(hsl(273, 75%, 66%), hsl(240, 73%, 65%));
+    background: -webkit-linear-gradient(hsl(273, 75%, 66%), hsl(240, 73%, 65%));
 
     overflow: auto;
 
@@ -58,10 +59,10 @@ body{
     justify-content: space-between;
     align-items: center;
     
-    width: 1100px;
-    height: 600px;
+    width: 1050px;
+    height: 550px;
     background: url('./images/bg-pattern-desktop.svg') no-repeat;
-    background-position: -400% 80%;
+    background-position: -650% 80%;
     background-color: white;
     border-radius: 30px;
     
@@ -124,6 +125,7 @@ body{
 
 .faq-item p{
     color:hsl(240, 6%, 50%);
+    transition: all .2s;
 }
 
 .active {
@@ -137,11 +139,13 @@ body{
     animation: slide-down .8s ease-in-out;
     max-height: 0;
     overflow: hidden;
+    opacity: 0;
 }
 
 .show{
     animation: slide-up .8s ease-in-out;
     max-height: 400px;
+    opacity: 100;
 }
 
 .woman-mobile{
@@ -157,14 +161,16 @@ body{
     .faq-card{
         flex-direction: column;
         width: 475px;
-        height: auto;
+        height: auto !important;
+        min-height: 650px;
         justify-content: center;
-        padding: 0px 10px 10px 10px;
+        padding: 0px 10px 10px 10px !important;
 
-        margin-top: 100px;
+        margin-top: 200px;
+        margin-bottom: 100px;
     }
     .faq-list{
-        padding: 20px;
+        padding: 20px !important;
         width: 80%;
         margin: 0;
 
